# learn-opengl

./: .clang-format  .gitignore  ;  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Cube.cpp  Cube.hpp  Engine.cpp  Engine.hpp  GLUtils.cpp  GLUtils.hpp  InputHandler.cpp  InputHandler.hpp  Main.cpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/Shaders/: fragment.frag  vertex.vert
